--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mobile.css">
-    <title>Saloon_Project</title>
+    <title>Salon_Project</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
@@ -14,11 +14,11 @@
   <header>
 <nav>
     <div class="logo">
-        <a href="#">Saloon</a>
+        <a href="/">Salon</a>
     </div>
 
     <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="/">Home</a></li>
         <li><a href="#About">About</a></li>
         <li><a href="#Service">Service</a></li>
         <li><a href="#Gallery">Gallery</a></li>
@@ -26,14 +26,7 @@
         <li><a href="#CONTACT">Contact</a></li>
     </ul>
 
-<div class="scl">
-    <li> <a href="#" class="fbs ins" >
-        <?xml version="1.0"?><svg  xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 50 50" width="40px" height="40px">    <path d="M 16 3 C 8.83 3 3 8.83 3 16 L 3 34 C 3 41.17 8.83 47 16 47 L 34 47 C 41.17 47 47 41.17 47 34 L 47 16 C 47 8.83 41.17 3 34 3 L 16 3 z M 37 11 C 38.1 11 39 11.9 39 13 C 39 14.1 38.1 15 37 15 C 35.9 15 35 14.1 35 13 C 35 11.9 35.9 11 37 11 z M 25 14 C 31.07 14 36 18.93 36 25 C 36 31.07 31.07 36 25 36 C 18.93 36 14 31.07 14 25 C 14 18.93 18.93 14 25 14 z M 25 16 C 20.04 16 16 20.04 16 25 C 16 29.96 20.04 34 25 34 C 29.96 34 34 29.96 34 25 C 34 20.04 29.96 16 25 16 z"/></svg>
-    </a></li>
-    <li> <a href="#" class="fbs">
-        <?xml version="1.0"?><svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 50 50" width="40px" height="40px">    <path d="M41,4H9C6.24,4,4,6.24,4,9v32c0,2.76,2.24,5,5,5h32c2.76,0,5-2.24,5-5V9C46,6.24,43.76,4,41,4z M37,19h-2c-2.14,0-3,0.5-3,2 v3h5l-1,5h-4v15h-5V29h-4v-5h4v-3c0-4,2-7,6-7c2.9,0,4,1,4,1V19z"/></svg>
-    </a></li>
-</div>
+
 </nav>
 <button class="toggle-btn" id="clk">Click On</button>
 
@@ -284,20 +277,20 @@
 <div class="cont">
 <ul>
     <li>
-     <a href=""><span class="icon"> <svg xmlns="http://www.w3.org/2000/svg" height="60px" viewBox="0 96 960 960" width="60px"><path d="M480 976q-106 0-173-31t-67-79q0-27 24.5-51t67.5-39l18 58q-16 5-29.5 14T299 866q17 20 70.5 35T480 916q57 0 111-15t71-35q-8-8-21-17t-30-15l17-58q43 15 67.5 39t24.5 51q0 48-67 79t-173 31Zm0-215q21.103-39 44.552-71.5Q548 657 571 628q44-57 69.5-98T666 421.926q0-77.666-54.214-131.796-54.215-54.13-132-54.13Q402 236 348 290.13t-54 131.796Q294 489 319.5 530t69.5 98q23 29 46.448 61.5Q458.897 722 480 761Zm0 109q-12 0-21-6.771T446 845q-24-73-60.019-121-36.02-48-69.981-92-34-44-58-91.5t-24-118.541Q234 319 305.319 247.5 376.639 176 480 176q103.361 0 174.681 71.319Q726 318.639 726 422q0 71-23.873 118.341Q678.253 587.681 644 632q-34 44-70 92t-59.852 120.732Q510 856 501 863t-21 7Zm.208-388Q505 482 522.5 464.292q17.5-17.709 17.5-42.5Q540 397 522.292 379.5q-17.709-17.5-42.5-17.5Q455 362 437.5 379.708q-17.5 17.709-17.5 42.5Q420 447 437.708 464.5q17.709 17.5 42.5 17.5ZM480 422Z"/></svg></span>
-        <span class="add">H.No. 184, A-Block Road No.1, G/F  Extn.  11-110037</span></a>
+     <span class="icon"> <svg xmlns="http://www.w3.org/2000/svg" height="60px" viewBox="0 96 960 960" width="60px"><path d="M480 976q-106 0-173-31t-67-79q0-27 24.5-51t67.5-39l18 58q-16 5-29.5 14T299 866q17 20 70.5 35T480 916q57 0 111-15t71-35q-8-8-21-17t-30-15l17-58q43 15 67.5 39t24.5 51q0 48-67 79t-173 31Zm0-215q21.103-39 44.552-71.5Q548 657 571 628q44-57 69.5-98T666 421.926q0-77.666-54.214-131.796-54.215-54.13-132-54.13Q402 236 348 290.13t-54 131.796Q294 489 319.5 530t69.5 98q23 29 46.448 61.5Q458.897 722 480 761Zm0 109q-12 0-21-6.771T446 845q-24-73-60.019-121-36.02-48-69.981-92-34-44-58-91.5t-24-118.541Q234 319 305.319 247.5 376.639 176 480 176q103.361 0 174.681 71.319Q726 318.639 726 422q0 71-23.873 118.341Q678.253 587.681 644 632q-34 44-70 92t-59.852 120.732Q510 856 501 863t-21 7Zm.208-388Q505 482 522.5 464.292q17.5-17.709 17.5-42.5Q540 397 522.292 379.5q-17.709-17.5-42.5-17.5Q455 362 437.5 379.708q-17.5 17.709-17.5 42.5Q420 447 437.708 464.5q17.709 17.5 42.5 17.5ZM480 422Z"/></svg></span>
+        <span class="add">H.No. 01, A-Block Road No.1,  Extn. 010101</span>
     </li>
     <li>
-     <a href=""><span class="icon">
+<span class="icon">
         <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960" width="48"><path d="M260 1016q-24 0-42-18t-18-42V196q0-24 18-42t42-18h440q24 0 42 18t18 42v760q0 24-18 42t-42 18H260Zm0-90v30h440v-30H260Zm0-60h440V286H260v580Zm0-640h440v-30H260v30Zm0 0v-30 30Zm0 700v30-30Z"/></svg></span>
         <span class="add">+91 00000000</span>
-        <span class="add"> +91 0000000</span></a>
+        <span class="add"> +91 0000000</span>
     </li>
     <li>
-     <a href=""><span class="icon"> 
+     <span class="icon"> 
         <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960" width="48"><path d="M140 896q-24 0-42-18t-18-42V316q0-24 18-42t42-18h680q24 0 42 18t18 42v520q0 24-18 42t-42 18H140Zm340-302L140 371v465h680V371L480 594Zm0-60 336-218H145l335 218ZM140 371v-55 520-465Z"/></svg></span>
         <span class="add"> +info@gmial.com</span>
-        <span class="add"> +info@gmial.com</span></a>
+        <span class="add"> +info@gmial.com</span>
     </li>
 </ul>
 </div>
@@ -315,7 +308,7 @@
 </form>
 
 <div class="map_dtl">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2479.0163383077993!2d77.07999902412777!3d28.51390386472615!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d195e96bb4105%3A0xfba8615a67d65660!2sOnkar%20Infotech!5e0!3m2!1sen!2sin!4v1683298221498!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7013.946805277415!2d77.01475643765717!3d28.48034763347093!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1729615689321!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 </div>
 
@@ -326,7 +319,7 @@
 
 <footer>
 <div class="foot">
-   <span> &#169; 2023 All rights reserved by Saloon</span>
+   <span> &#169; 2023 All rights reserved by Salon</span>
    <div class="fotsl">
 <span > <a href=""><?xml version="1.0"?><svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 50 50" width="40px" height="40px">    <path d="M41,4H9C6.24,4,4,6.24,4,9v32c0,2.76,2.24,5,5,5h32c2.76,0,5-2.24,5-5V9C46,6.24,43.76,4,41,4z M37,19h-2c-2.14,0-3,0.5-3,2 v3h5l-1,5h-4v15h-5V29h-4v-5h4v-3c0-4,2-7,6-7c2.9,0,4,1,4,1V19z"/></svg></a></span>
 
